--- a/index.html
+++ b/index.html
@@ -1317,14 +1317,14 @@
             
             <div class="gallery-grid" id="galleryGrid">
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1562774053-701939374585?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2064&q=80" alt="School Building">
+                    <img src="https://ibb.co/23KQcsBS" alt="School Building">
                     <div class="gallery-overlay">
                         <h4>Main Building</h4>
                     </div>
                 </div>
                 
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1588072432836-e10032774350?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2072&q=80" alt="Classroom">
+                    <img src="https://ibb.co/sprrtRtd" alt="Classroom">
                     <div class="gallery-overlay">
                         <h4>Modern Classroom</h4>
                     </div>
