--- a/index.html
+++ b/index.html
@@ -1317,7 +1317,7 @@
             
             <div class="gallery-grid" id="galleryGrid">
                 <div class="gallery-item">
-                    <img src="https://ibb.co/23KQcsBS" alt="School Building">
+                    <img src="https://i.ibb.co/Hp99C9HJ/IMG-20260210-WA0017.webp" alt="School Building">
                     <div class="gallery-overlay">
                         <h4>Main Building</h4>
                     </div>
