--- a/index.html
+++ b/index.html
@@ -1317,14 +1317,14 @@
             
             <div class="gallery-grid" id="galleryGrid">
                 <div class="gallery-item">
-                    <img src="https://i.ibb.co/Hp99C9HJ/IMG-20260210-WA0017.webp" alt="School Building">
+                    <img src="https://i.ibb.co/84mT0HZX/IMG-20260211-WA0001.webp" alt="School Building">
                     <div class="gallery-overlay">
                         <h4>Main Building</h4>
                     </div>
                 </div>
                 
                 <div class="gallery-item">
-                    <img src="https://ibb.co/sprrtRtd" alt="Classroom">
+                    <img src="https://i.ibb.co/Hp99C9HJ/IMG-20260210-WA0017.webp" alt="Classroom">
                     <div class="gallery-overlay">
                         <h4>Modern Classroom</h4>
                     </div>
